--- a/php/conf/php.test.ini
+++ b/php/conf/php.test.ini
@@ -311,7 +311,7 @@ serialize_precision = -1
 ; This directive allows you to disable certain functions for security reasons.
 ; It receives a comma-delimited list of function names.
 ; http://php.net/disable-functions
-disable_functions = system,passthru,popen,phpinfo,proc_close,proc_open,dl,show_source,get_cfg_var
+disable_functions = system,passthru,popen,phpinfo,proc_close,proc_open,dl,show_source
 
 ; This directive allows you to disable certain classes for security reasons.
 ; It receives a comma-delimited list of class names.
