--- a/php/conf/www.conf
+++ b/php/conf/www.conf
@@ -412,4 +412,4 @@ env[x-rid] =  $x-rid
 ;php_admin_value[error_log] = /var/log/fpm-php.www.log
 ;php_admin_flag[log_errors] = on
 ;php_admin_value[memory_limit] = 32M
-php_admin_value[disable_functions] = system,passthru,shell_exec,exec,popen,phpinfo,proc_close,proc_open,dl,show_source,get_cfg_var
+;php_admin_value[disable_functions] = system,passthru,shell_exec,exec,popen,phpinfo,proc_close,proc_open,dl,show_source,get_cfg_var
